# borsh-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  release-plz.toml  rust-toolchain.toml  rustfmt.toml
benchmarks/: Cargo.toml
benchmarks/benches/: bench.rs  maps_sets_inner_de.rs  maps_sets_inner_ser.rs  object_length.rs
benchmarks/src/: lib.rs
borsh/: CHANGELOG.md  Cargo.toml  build.rs
borsh-derive/: CHANGELOG.md  Cargo.toml
borsh-derive-internal/: Cargo.toml
borsh-derive-internal/src/: attribute_helpers.rs  enum_de.rs  enum_discriminant_map.rs  enum_ser.rs  generics.rs  lib.rs  struct_de.rs  struct_ser.rs  test_helpers.rs  tokio.rs  union_ser.rs
borsh-derive-internal/src/attribute_helpers/: field.rs  mod.rs  parsing.rs  parsing_helpers.rs
borsh-derive-internal/src/snapshots/: borsh_derive_internal__attribute_helpers__tests__bounds_parsing1-2.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing1.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing2.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing3-2.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing3.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing4-2.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing4.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing_error.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing_error2.snap  borsh_derive_internal__attribute_helpers__tests__bounds_parsing_error3.snap  borsh_derive_internal__attribute_helpers__tests__check_use_borsh_invalid_on_whole_struct.snap  borsh_derive_internal__attribute_helpers__tests__check_use_borsh_skip_on_whole_struct.snap  borsh_derive_internal__attribute_helpers__tests__check_use_discriminant_on_struct.snap  borsh_derive_internal__attribute_helpers__tests__check_use_discriminant_wrong_value.snap  borsh_derive_internal__attribute_helpers__tests__schema_params_parsing1.snap  borsh_derive_internal__attribute_helpers__tests__schema_params_parsing2.snap  borsh_derive_internal__attribute_helpers__tests__schema_params_parsing_error.snap  borsh_derive_internal__enum_de__tests__borsh_discriminant_false.snap  borsh_derive_internal__enum_de__tests__borsh_discriminant_true.snap  borsh_derive_internal__enum_de__tests__borsh_skip_struct_variant_field.snap  borsh_derive_internal__enum_de__tests__borsh_skip_tuple_variant_field.snap  borsh_derive_internal__enum_de__tests__bound_generics.snap  borsh_derive_internal__enum_de__tests__check_deserialize_with_attr.snap  borsh_derive_internal__enum_de__tests__generic_borsh_skip_struct_field.snap  borsh_derive_internal__enum_de__tests__generic_borsh_skip_tuple_field.snap  borsh_derive_internal__enum_de__tests__generic_deserialize_bound.snap  borsh_derive_internal__enum_de__tests__recursive_enum.snap  borsh_derive_internal__enum_de__tests__simple_generics.snap  borsh_derive_internal__enum_ser__tests__borsh_discriminant_false.snap  borsh_derive_internal__enum_ser__tests__borsh_discriminant_true.snap  borsh_derive_internal__enum_ser__tests__borsh_skip_struct_variant_all_fields.snap  borsh_derive_internal__enum_ser__tests__borsh_skip_struct_variant_field.snap  borsh_derive_internal__enum_ser__tests__borsh_skip_tuple_variant_field.snap  borsh_derive_internal__enum_ser__tests__bound_generics.snap  borsh_derive_internal__enum_ser__tests__check_serialize_with_attr.snap  borsh_derive_internal__enum_ser__tests__generic_borsh_skip_struct_field.snap  borsh_derive_internal__enum_ser__tests__generic_borsh_skip_tuple_field.snap  borsh_derive_internal__enum_ser__tests__generic_serialize_bound.snap  borsh_derive_internal__enum_ser__tests__recursive_enum.snap  borsh_derive_internal__enum_ser__tests__simple_generics.snap  (+25 more)
borsh-derive-internal/src/tokio/: enum_de.rs  enum_ser.rs  struct_de.rs  struct_ser.rs  union_de.rs
borsh-derive/src/: enum_schema.rs  enum_ser.rs  internals.rs  lib.rs
borsh-derive/src/attribute_helpers/: field.rs  mod.rs
borsh-derive/src/internals/: cratename.rs  enum_discriminant.rs  generics.rs  mod.rs  test_helpers.rs
borsh-derive/src/snapshots/: borsh_derive__enum_de__tests__borsh_discriminant_false.snap  borsh_derive__enum_de__tests__borsh_discriminant_true.snap  borsh_derive__enum_de__tests__borsh_skip_struct_variant_field.snap  borsh_derive__enum_de__tests__borsh_skip_tuple_variant_field.snap  borsh_derive__enum_de__tests__bound_generics.snap  borsh_derive__enum_de__tests__check_deserialize_with_attr.snap  borsh_derive__enum_de__tests__generic_borsh_skip_struct_field.snap  borsh_derive__enum_de__tests__generic_borsh_skip_tuple_field.snap  borsh_derive__enum_de__tests__generic_deserialize_bound.snap  borsh_derive__enum_de__tests__recursive_enum.snap  (+83 more)
borsh-schema-derive-internal/: Cargo.toml
borsh-schema-derive-internal/src/: attribute_helpers.rs  enum_schema.rs  generics.rs  helpers.rs  lib.rs  schema_helpers.rs  struct_schema.rs
borsh/examples/: serde_json_value.rs
borsh/src/: async_io.rs  bigint.rs  error.rs  generate_schema_schema.rs  lib.rs  nostd_io.rs  schema.rs  schema_helpers.rs  tokio.rs
borsh/src/de/: hint.rs  (+1 more)
borsh/tests/: common_macro.rs  smoke.rs  test_arrays.rs  test_ascii_strings.rs  test_big_decimal.rs  test_big_integers.rs  test_binary_heaps.rs  test_bson_object_ids.rs  test_btree_map.rs  test_cells.rs  test_cow.rs  test_custom_reader.rs  test_de_errors.rs  test_duration.rs  test_enum_discriminants.rs  test_generic_struct.rs  test_hash_map.rs  test_init_in_deserialize.rs  test_macro_namespace_collisions.rs  test_nonzero_integers.rs  test_primitives.rs  test_range.rs  test_rc.rs  test_recursive_enum.rs  test_recursive_structs.rs  test_schema_conflict.rs  test_schema_enums.rs  test_schema_nested.rs  test_schema_primitives.rs  test_schema_recursive.rs  test_schema_structs.rs  test_schema_tuple.rs  test_schema_validate.rs  test_schema_vec.rs  test_schema_with.rs  test_ser_de_with.rs  test_simple_structs.rs  test_simple_structs_without_discriminant_support.rs  test_strings.rs  test_tuple.rs  (+14 more)
fuzz/fuzz-run/: Cargo.toml
(+824 files in other folders)
