[workspace]
members = [
    "borsh",
    "borsh-derive",
    "borsh-derive-internal",
    "borsh-schema-derive-internal",
    "fuzz/fuzz-run",
    "benchmarks",
]

[workspace.metadata.workspaces]
exclude = [ "fuzz/*", "benchmarks" ]

[workspace.package]
# shared version of all public crates in the workspace
version = "0.10.2"
