[workspace]
members = [
    "borsh",
    "borsh-derive",
    "borsh-derive-internal",
    "borsh-schema-derive-internal",
    "fuzz/fuzz-run",
    "benchmarks",
]

[workspace.metadata.workspaces]
# shared version of all public crates in the workspace
version = "0.10.4"
exclude = [ "fuzz/*", "benchmarks" ]
