[workspace]
members = ["borsh", "borsh-derive", "fuzz/fuzz-run", "benchmarks"]
# benchmarks and fuzz need extra features to build, so keep them out of bare
# `cargo` invocations from the workspace root.
default-members = ["borsh", "borsh-derive"]

[workspace.package]
# shared version of all public crates in the workspace
version = "1.7.0"
rust-version = "1.77.0"
