[package]
name = "benchmarks"
version.workspace = true
rust-version.workspace = true
authors = ["Near Inc <hello@nearprotocol.com>"]
edition.workspace = true
publish = false

# This is somehow needed for command line arguments to work: https://github.com/bheisler/criterion.rs/issues/193#issuecomment-415740713
[lib]
bench = false

[dependencies]
rand_xorshift = "0.2.0"
rand = "0.7.0"
borsh = { path = "../borsh", default-features = false, features = ["std", "derive"] }
serde = { version = "1.0", features = ["derive"] }
speedy-derive = "0.5"
speedy = "0.5"

[dev-dependencies]
criterion = "0.3.0"
bincode = "1.1.4"
serde_cbor = "0.10"


[[bench]]
name = "bench"
harness = false

[[bench]]
name = "maps_sets_inner_ser"
harness = false

[[bench]]
name = "maps_sets_inner_de"
harness = false

[[bench]]
name = "object_length"
harness = false
