[package]
name = "borsh-derive-internal"
version.workspace = true
rust-version.workspace = true
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "https://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "fold"] }
quote = "1"
proc-macro-crate = "1"

[dev-dependencies]
syn = { version = "2", features = ["full", "fold", "parsing"] }
prettyplease = "0.2.9"
insta = "1.29.0"
