[package]
name = "borsh-derive"
version.workspace = true
rust-version.workspace = true
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[lib]
proc-macro = true

[dependencies]
borsh-derive-internal = { version = "0.10.3", path = "../borsh-derive-internal" }
borsh-schema-derive-internal = { version = "0.10.3", path = "../borsh-schema-derive-internal" }
syn = {version = "1", features = ["full", "fold"] }
proc-macro-crate = "0.1.5"
proc-macro2 = "1"
