[package]
name = "borsh-schema-derive-internal"
version.workspace = true
rust-version.workspace = true
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "https://borsh.io"
description = """
Schema Generator for Borsh
"""

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "fold"] }
quote = "1"
syn_derive = "0.1.6"

[dev-dependencies]
syn = { version = "2", features = ["full", "fold", "parsing"] }
prettyplease = "0.2.9"
insta = "1.29.0"

[features]
default = []
force_exhaustive_checks = []
