[package]
name = "borsh"
version = "0.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/near/borsh-rs"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[lib]
name = "borsh"
path = "src/lib.rs"

[[bin]]
name = "generate_schema_schema"
path = "src/generate_schema_schema.rs"

[dependencies]
bigdecimal-dep = { package = "bigdecimal", version = "0.3", optional = true }
num-bigint-dep = { package = "num-bigint", version = "0.4.3", optional = true }
borsh-derive = { path = "../borsh-derive" }
hashbrown = "0.11"

[dev-dependencies]
quickcheck = "1.0"

[features]
default = ["std"]
std = []
rc = []
bigdecimal = ["num-bigint"]
num-bigint = ["num-bigint-dep"]
const-generics = []
