[package]
name = "borsh"
version = "0.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/near/borsh-rs"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[lib]
name = "borsh"
path = "src/lib.rs"

[[bin]]
name = "generate_schema_schema"
path = "src/generate_schema_schema.rs"

[dependencies]
num-bigint-dep = { package = "num-bigint", version = "0.4.3", optional = true }
borsh-derive = { path = "../borsh-derive" }
hashbrown = "0.11"
unsigned-varint = { version = "0.7", optional = true }

[dev-dependencies]
quickcheck = "1.0"

[features]
default = ["std"]
std = []
rc = []
num-bigint = ["num-bigint-dep", "unsigned-varint"]
const-generics = []
