[package]
name = "borsh"
version.workspace = true
rust-version.workspace = true
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/near/borsh-rs"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[lib]
name = "borsh"
path = "src/lib.rs"

[[bin]]
name = "generate_schema_schema"
path = "src/generate_schema_schema.rs"

[dependencies]
borsh-derive = { version = "0.10.3", path = "../borsh-derive" }
hashbrown = ">=0.11,<0.14"
bytes = { version = "1", optional = true }

[dev-dependencies]
bytes = "1"
# Enable the "bytes" feature in integ tests: https://github.com/rust-lang/cargo/issues/2911#issuecomment-1464060655
borsh = { path = ".", features = ["bytes"] }

[features]
default = ["std"]
std = []
rc = []
const-generics = []
